Fixed some styling issues found from testing layout on mobile.

--- a/src/styles/customers/customers.scss
+++ b/src/styles/customers/customers.scss
@@ -23,8 +23,8 @@
   .customer-card {
     display: flex;
     background-color: var(--white);
-    max-width: 80%;
-    height: 16rem;
+    max-width: 85%;
+    height: 18rem;
 
     .customer-image-wrapper {
       margin: auto 0;
